added course content db model and crud operations

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,7 +1,7 @@
 :root{
         /* background-color: #252A34; */
         background-size:contain;
-        background-image: url("https://source.unsplash.com/1600x900/?nature,water");
+        background-image: url("https://source.unsplash.com/1600x900/?dark,black,nature,water");
         background-repeat: no-repeat;
         background-size: cover;
 } 
